@@ -309,8 +309,8 @@ public class FilterIndexReader extends IndexReader {
    *  contents of the FieldCache, you must override this
    *  method to provide a different key */
   @Override
-  public Object getFieldCacheKey() {
-    return in.getFieldCacheKey();
+  public Object getCoreCacheKey() {
+    return in.getCoreCacheKey();
   }
 
   /** {@inheritDoc} */
